<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lista_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtNomeUtilizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/nome_do_utilizador"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="127dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:text="@string/carregar_foto_galeria"
                android:textColor="#000000"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeUtilizador" />

            <Button
                android:id="@+id/button2"
                android:layout_width="127dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:text="@string/tirar_foto_camera"
                android:textColor="#000000"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeUtilizador" />

            <ImageView
                android:id="@+id/btnAbrirGaleria"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:srcCompat="@drawable/ic_add"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@drawable/ic_add" />

            <ImageView
                android:id="@+id/btnTirarFoto"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/button2"
                app:layout_constraintStart_toStartOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                app:srcCompat="@drawable/ic_camera"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@drawable/ic_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="10"
            tools:listitem="@layout/custom_itens_row"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</LinearLayout>